compiladores/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> declaracoes bloco
Rule 2     bloco -> BEGIN comando lista_com END
Rule 3     declaracoes -> def_const def_tipos def_var def_rotina
Rule 4     def_const -> constante def_const
Rule 5     def_const -> empty
Rule 6     const_valor -> PALAVRA
Rule 7     const_valor -> exp_mat
Rule 8     def_tipos -> tipo def_tipos
Rule 9     def_tipos -> empty
Rule 10    def_var -> variavel def_var
Rule 11    def_var -> empty
Rule 12    def_rotina -> rotina def_rotina
Rule 13    def_rotina -> empty
Rule 14    constante -> CONST ID = const_valor ;
Rule 15    tipo -> TYPE ID = tipo_dado ;
Rule 16    variavel -> VAR campo ;
Rule 17    campo -> ID lista_id : tipo_dado
Rule 18    rotina -> FUNCTION ID param_rotina : tipo_dado bloco_rotina
Rule 19    rotina -> PROCEDURE ID param_rotina bloco_rotina
Rule 20    param_rotina -> ( campos )
Rule 21    param_rotina -> empty
Rule 22    bloco_rotina -> def_var bloco
Rule 23    lista_com -> ; comando lista_com
Rule 24    lista_com -> empty
Rule 25    comando -> ID nome atribuicao
Rule 26    comando -> WHILE exp_logica DO bloco_com
Rule 27    comando -> IF exp_logica THEN bloco_com else
Rule 28    comando -> FOR for DO bloco_com
Rule 29    comando -> WRITE const_valor
Rule 30    comando -> READ ID nome
Rule 31    atribuicao -> ATRIBUICAO exp
Rule 32    atribuicao -> empty
Rule 33    exp -> exp_mat
Rule 34    exp -> exp_logica
Rule 35    exp_logica -> param_logico op_logico exp_logica
Rule 36    exp_logica -> ( param_logico op_logico exp_logica )
Rule 37    exp_logica -> param_logico
Rule 38    param_logico -> parametro op_comp parametro
Rule 39    param_logico -> parametro
Rule 40    exp_mat -> parametro op_mat exp_mat
Rule 41    exp_mat -> ( parametro op_mat exp_mat )
Rule 42    exp_mat -> parametro
Rule 43    parametro -> ID nome
Rule 44    parametro -> NUMERO
Rule 45    parametro -> FALSE
Rule 46    parametro -> TRUE
Rule 47    nome -> . ID nome
Rule 48    nome -> [ parametro ]
Rule 49    nome -> ( lista_param )
Rule 50    nome -> empty
Rule 51    lista_param -> parametro , lista_param
Rule 52    lista_param -> parametro
Rule 53    lista_param -> empty
Rule 54    lista_id -> , ID lista_id
Rule 55    lista_id -> empty
Rule 56    campos -> campo lista_campos
Rule 57    lista_campos -> ; campo lista_campos
Rule 58    lista_campos -> empty
Rule 59    tipo_dado -> INTEGER
Rule 60    tipo_dado -> REAL
Rule 61    tipo_dado -> CHAR
Rule 62    tipo_dado -> BOOLEAN
Rule 63    tipo_dado -> ARRAY [ NUMERO ] OF tipo_dado
Rule 64    tipo_dado -> RECORD campos END
Rule 65    tipo_dado -> ID
Rule 66    for -> ID ATRIBUICAO parametro TO parametro
Rule 67    else -> ELSE bloco_com
Rule 68    else -> empty
Rule 69    bloco_com -> bloco
Rule 70    bloco_com -> comando
Rule 71    op_logico -> AND
Rule 72    op_logico -> OR
Rule 73    op_comp -> >
Rule 74    op_comp -> <
Rule 75    op_comp -> COMPARACAO
Rule 76    op_mat -> +
Rule 77    op_mat -> -
Rule 78    op_mat -> *
Rule 79    op_mat -> /
Rule 80    empty -> <empty>

Terminals, with rules where they appear

(                    : 20 36 41 49
)                    : 20 36 41 49
*                    : 78
+                    : 76
,                    : 51 54
-                    : 77
.                    : 47
/                    : 79
:                    : 17 18
;                    : 14 15 16 23 57
<                    : 74
=                    : 14 15
>                    : 73
AND                  : 71
ARRAY                : 63
ATRIBUICAO           : 31 66
BEGIN                : 2
BOOLEAN              : 62
CHAR                 : 61
COMPARACAO           : 75
CONST                : 14
DO                   : 26 28
ELSE                 : 67
END                  : 2 64
FALSE                : 45
FOR                  : 28
FUNCTION             : 18
ID                   : 14 15 17 18 19 25 30 43 47 54 65 66
IF                   : 27
INTEGER              : 59
NUMERO               : 44 63
OF                   : 63
OR                   : 72
PALAVRA              : 6
PROCEDURE            : 19
READ                 : 30
REAL                 : 60
RECORD               : 64
THEN                 : 27
TO                   : 66
TRUE                 : 46
TYPE                 : 15
VAR                  : 16
WHILE                : 26
WRITE                : 29
[                    : 48 63
]                    : 48 63
error                : 

Nonterminals, with rules where they appear

atribuicao           : 25
bloco                : 1 22 69
bloco_com            : 26 27 28 67
bloco_rotina         : 18 19
campo                : 16 56 57
campos               : 20 64
comando              : 2 23 70
const_valor          : 14 29
constante            : 4
declaracoes          : 1
def_const            : 3 4
def_rotina           : 3 12
def_tipos            : 3 8
def_var              : 3 10 22
else                 : 27
empty                : 5 9 11 13 21 24 32 50 53 55 58 68
exp                  : 31
exp_logica           : 26 27 34 35 36
exp_mat              : 7 33 40 41
for                  : 28
lista_campos         : 56 57
lista_com            : 2 23
lista_id             : 17 54
lista_param          : 49 51
nome                 : 25 30 43 47
op_comp              : 38
op_logico            : 35 36
op_mat               : 40 41
param_logico         : 35 36 37
param_rotina         : 18 19
parametro            : 38 38 39 40 41 42 48 51 52 66 66
programa             : 0
rotina               : 12
tipo                 : 8
tipo_dado            : 15 17 18 63
variavel             : 10

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . declaracoes bloco
    (3) declaracoes -> . def_const def_tipos def_var def_rotina
    (4) def_const -> . constante def_const
    (5) def_const -> . empty
    (14) constante -> . CONST ID = const_valor ;
    (80) empty -> .

    CONST           shift and go to state 6
    TYPE            reduce using rule 80 (empty -> .)
    VAR             reduce using rule 80 (empty -> .)
    FUNCTION        reduce using rule 80 (empty -> .)
    PROCEDURE       reduce using rule 80 (empty -> .)
    BEGIN           reduce using rule 80 (empty -> .)

    programa                       shift and go to state 1
    declaracoes                    shift and go to state 2
    def_const                      shift and go to state 3
    constante                      shift and go to state 4
    empty                          shift and go to state 5

state 1

    (0) S' -> programa .



state 2

    (1) programa -> declaracoes . bloco
    (2) bloco -> . BEGIN comando lista_com END

    BEGIN           shift and go to state 8

    bloco                          shift and go to state 7

state 3

    (3) declaracoes -> def_const . def_tipos def_var def_rotina
    (8) def_tipos -> . tipo def_tipos
    (9) def_tipos -> . empty
    (15) tipo -> . TYPE ID = tipo_dado ;
    (80) empty -> .

    TYPE            shift and go to state 12
    VAR             reduce using rule 80 (empty -> .)
    FUNCTION        reduce using rule 80 (empty -> .)
    PROCEDURE       reduce using rule 80 (empty -> .)
    BEGIN           reduce using rule 80 (empty -> .)

    def_tipos                      shift and go to state 9
    tipo                           shift and go to state 10
    empty                          shift and go to state 11

state 4

    (4) def_const -> constante . def_const
    (4) def_const -> . constante def_const
    (5) def_const -> . empty
    (14) constante -> . CONST ID = const_valor ;
    (80) empty -> .

    CONST           shift and go to state 6
    TYPE            reduce using rule 80 (empty -> .)
    VAR             reduce using rule 80 (empty -> .)
    FUNCTION        reduce using rule 80 (empty -> .)
    PROCEDURE       reduce using rule 80 (empty -> .)
    BEGIN           reduce using rule 80 (empty -> .)

    constante                      shift and go to state 4
    def_const                      shift and go to state 13
    empty                          shift and go to state 5

state 5

    (5) def_const -> empty .

    TYPE            reduce using rule 5 (def_const -> empty .)
    VAR             reduce using rule 5 (def_const -> empty .)
    FUNCTION        reduce using rule 5 (def_const -> empty .)
    PROCEDURE       reduce using rule 5 (def_const -> empty .)
    BEGIN           reduce using rule 5 (def_const -> empty .)


state 6

    (14) constante -> CONST . ID = const_valor ;

    ID              shift and go to state 14


state 7

    (1) programa -> declaracoes bloco .

    $end            reduce using rule 1 (programa -> declaracoes bloco .)


state 8

    (2) bloco -> BEGIN . comando lista_com END
    (25) comando -> . ID nome atribuicao
    (26) comando -> . WHILE exp_logica DO bloco_com
    (27) comando -> . IF exp_logica THEN bloco_com else
    (28) comando -> . FOR for DO bloco_com
    (29) comando -> . WRITE const_valor
    (30) comando -> . READ ID nome

    ID              shift and go to state 16
    WHILE           shift and go to state 17
    IF              shift and go to state 18
    FOR             shift and go to state 19
    WRITE           shift and go to state 20
    READ            shift and go to state 21

    comando                        shift and go to state 15

state 9

    (3) declaracoes -> def_const def_tipos . def_var def_rotina
    (10) def_var -> . variavel def_var
    (11) def_var -> . empty
    (16) variavel -> . VAR campo ;
    (80) empty -> .

    VAR             shift and go to state 25
    FUNCTION        reduce using rule 80 (empty -> .)
    PROCEDURE       reduce using rule 80 (empty -> .)
    BEGIN           reduce using rule 80 (empty -> .)

    def_var                        shift and go to state 22
    variavel                       shift and go to state 23
    empty                          shift and go to state 24

state 10

    (8) def_tipos -> tipo . def_tipos
    (8) def_tipos -> . tipo def_tipos
    (9) def_tipos -> . empty
    (15) tipo -> . TYPE ID = tipo_dado ;
    (80) empty -> .

    TYPE            shift and go to state 12
    VAR             reduce using rule 80 (empty -> .)
    FUNCTION        reduce using rule 80 (empty -> .)
    PROCEDURE       reduce using rule 80 (empty -> .)
    BEGIN           reduce using rule 80 (empty -> .)

    tipo                           shift and go to state 10
    def_tipos                      shift and go to state 26
    empty                          shift and go to state 11

state 11

    (9) def_tipos -> empty .

    VAR             reduce using rule 9 (def_tipos -> empty .)
    FUNCTION        reduce using rule 9 (def_tipos -> empty .)
    PROCEDURE       reduce using rule 9 (def_tipos -> empty .)
    BEGIN           reduce using rule 9 (def_tipos -> empty .)


state 12

    (15) tipo -> TYPE . ID = tipo_dado ;

    ID              shift and go to state 27


state 13

    (4) def_const -> constante def_const .

    TYPE            reduce using rule 4 (def_const -> constante def_const .)
    VAR             reduce using rule 4 (def_const -> constante def_const .)
    FUNCTION        reduce using rule 4 (def_const -> constante def_const .)
    PROCEDURE       reduce using rule 4 (def_const -> constante def_const .)
    BEGIN           reduce using rule 4 (def_const -> constante def_const .)


state 14

    (14) constante -> CONST ID . = const_valor ;

    =               shift and go to state 28


state 15

    (2) bloco -> BEGIN comando . lista_com END
    (23) lista_com -> . ; comando lista_com
    (24) lista_com -> . empty
    (80) empty -> .

    ;               shift and go to state 30
    END             reduce using rule 80 (empty -> .)

    lista_com                      shift and go to state 29
    empty                          shift and go to state 31

state 16

    (25) comando -> ID . nome atribuicao
    (47) nome -> . . ID nome
    (48) nome -> . [ parametro ]
    (49) nome -> . ( lista_param )
    (50) nome -> . empty
    (80) empty -> .

    .               shift and go to state 33
    [               shift and go to state 34
    (               shift and go to state 35
    ATRIBUICAO      reduce using rule 80 (empty -> .)
    ;               reduce using rule 80 (empty -> .)
    END             reduce using rule 80 (empty -> .)
    ELSE            reduce using rule 80 (empty -> .)

    nome                           shift and go to state 32
    empty                          shift and go to state 36

state 17

    (26) comando -> WHILE . exp_logica DO bloco_com
    (35) exp_logica -> . param_logico op_logico exp_logica
    (36) exp_logica -> . ( param_logico op_logico exp_logica )
    (37) exp_logica -> . param_logico
    (38) param_logico -> . parametro op_comp parametro
    (39) param_logico -> . parametro
    (43) parametro -> . ID nome
    (44) parametro -> . NUMERO
    (45) parametro -> . FALSE
    (46) parametro -> . TRUE

    (               shift and go to state 39
    ID              shift and go to state 41
    NUMERO          shift and go to state 42
    FALSE           shift and go to state 43
    TRUE            shift and go to state 44

    exp_logica                     shift and go to state 37
    param_logico                   shift and go to state 38
    parametro                      shift and go to state 40

state 18

    (27) comando -> IF . exp_logica THEN bloco_com else
    (35) exp_logica -> . param_logico op_logico exp_logica
    (36) exp_logica -> . ( param_logico op_logico exp_logica )
    (37) exp_logica -> . param_logico
    (38) param_logico -> . parametro op_comp parametro
    (39) param_logico -> . parametro
    (43) parametro -> . ID nome
    (44) parametro -> . NUMERO
    (45) parametro -> . FALSE
    (46) parametro -> . TRUE

    (               shift and go to state 39
    ID              shift and go to state 41
    NUMERO          shift and go to state 42
    FALSE           shift and go to state 43
    TRUE            shift and go to state 44

    exp_logica                     shift and go to state 45
    param_logico                   shift and go to state 38
    parametro                      shift and go to state 40

state 19

    (28) comando -> FOR . for DO bloco_com
    (66) for -> . ID ATRIBUICAO parametro TO parametro

    ID              shift and go to state 47

    for                            shift and go to state 46

state 20

    (29) comando -> WRITE . const_valor
    (6) const_valor -> . PALAVRA
    (7) const_valor -> . exp_mat
    (40) exp_mat -> . parametro op_mat exp_mat
    (41) exp_mat -> . ( parametro op_mat exp_mat )
    (42) exp_mat -> . parametro
    (43) parametro -> . ID nome
    (44) parametro -> . NUMERO
    (45) parametro -> . FALSE
    (46) parametro -> . TRUE

    PALAVRA         shift and go to state 49
    (               shift and go to state 52
    ID              shift and go to state 41
    NUMERO          shift and go to state 42
    FALSE           shift and go to state 43
    TRUE            shift and go to state 44

    const_valor                    shift and go to state 48
    exp_mat                        shift and go to state 50
    parametro                      shift and go to state 51

state 21

    (30) comando -> READ . ID nome

    ID              shift and go to state 53


state 22

    (3) declaracoes -> def_const def_tipos def_var . def_rotina
    (12) def_rotina -> . rotina def_rotina
    (13) def_rotina -> . empty
    (18) rotina -> . FUNCTION ID param_rotina : tipo_dado bloco_rotina
    (19) rotina -> . PROCEDURE ID param_rotina bloco_rotina
    (80) empty -> .

    FUNCTION        shift and go to state 57
    PROCEDURE       shift and go to state 58
    BEGIN           reduce using rule 80 (empty -> .)

    def_rotina                     shift and go to state 54
    rotina                         shift and go to state 55
    empty                          shift and go to state 56

state 23

    (10) def_var -> variavel . def_var
    (10) def_var -> . variavel def_var
    (11) def_var -> . empty
    (16) variavel -> . VAR campo ;
    (80) empty -> .

    VAR             shift and go to state 25
    FUNCTION        reduce using rule 80 (empty -> .)
    PROCEDURE       reduce using rule 80 (empty -> .)
    BEGIN           reduce using rule 80 (empty -> .)

    variavel                       shift and go to state 23
    def_var                        shift and go to state 59
    empty                          shift and go to state 24

state 24

    (11) def_var -> empty .

    FUNCTION        reduce using rule 11 (def_var -> empty .)
    PROCEDURE       reduce using rule 11 (def_var -> empty .)
    BEGIN           reduce using rule 11 (def_var -> empty .)


state 25

    (16) variavel -> VAR . campo ;
    (17) campo -> . ID lista_id : tipo_dado

    ID              shift and go to state 61

    campo                          shift and go to state 60

state 26

    (8) def_tipos -> tipo def_tipos .

    VAR             reduce using rule 8 (def_tipos -> tipo def_tipos .)
    FUNCTION        reduce using rule 8 (def_tipos -> tipo def_tipos .)
    PROCEDURE       reduce using rule 8 (def_tipos -> tipo def_tipos .)
    BEGIN           reduce using rule 8 (def_tipos -> tipo def_tipos .)


state 27

    (15) tipo -> TYPE ID . = tipo_dado ;

    =               shift and go to state 62


state 28

    (14) constante -> CONST ID = . const_valor ;
    (6) const_valor -> . PALAVRA
    (7) const_valor -> . exp_mat
    (40) exp_mat -> . parametro op_mat exp_mat
    (41) exp_mat -> . ( parametro op_mat exp_mat )
    (42) exp_mat -> . parametro
    (43) parametro -> . ID nome
    (44) parametro -> . NUMERO
    (45) parametro -> . FALSE
    (46) parametro -> . TRUE

    PALAVRA         shift and go to state 49
    (               shift and go to state 52
    ID              shift and go to state 41
    NUMERO          shift and go to state 42
    FALSE           shift and go to state 43
    TRUE            shift and go to state 44

    const_valor                    shift and go to state 63
    exp_mat                        shift and go to state 50
    parametro                      shift and go to state 51

state 29

    (2) bloco -> BEGIN comando lista_com . END

    END             shift and go to state 64


state 30

    (23) lista_com -> ; . comando lista_com
    (25) comando -> . ID nome atribuicao
    (26) comando -> . WHILE exp_logica DO bloco_com
    (27) comando -> . IF exp_logica THEN bloco_com else
    (28) comando -> . FOR for DO bloco_com
    (29) comando -> . WRITE const_valor
    (30) comando -> . READ ID nome

    ID              shift and go to state 16
    WHILE           shift and go to state 17
    IF              shift and go to state 18
    FOR             shift and go to state 19
    WRITE           shift and go to state 20
    READ            shift and go to state 21

    comando                        shift and go to state 65

state 31

    (24) lista_com -> empty .

    END             reduce using rule 24 (lista_com -> empty .)


state 32

    (25) comando -> ID nome . atribuicao
    (31) atribuicao -> . ATRIBUICAO exp
    (32) atribuicao -> . empty
    (80) empty -> .

    ATRIBUICAO      shift and go to state 67
    ;               reduce using rule 80 (empty -> .)
    END             reduce using rule 80 (empty -> .)
    ELSE            reduce using rule 80 (empty -> .)

    atribuicao                     shift and go to state 66
    empty                          shift and go to state 68

state 33

    (47) nome -> . . ID nome

    ID              shift and go to state 69


state 34

    (48) nome -> [ . parametro ]
    (43) parametro -> . ID nome
    (44) parametro -> . NUMERO
    (45) parametro -> . FALSE
    (46) parametro -> . TRUE

    ID              shift and go to state 41
    NUMERO          shift and go to state 42
    FALSE           shift and go to state 43
    TRUE            shift and go to state 44

    parametro                      shift and go to state 70

state 35

    (49) nome -> ( . lista_param )
    (51) lista_param -> . parametro , lista_param
    (52) lista_param -> . parametro
    (53) lista_param -> . empty
    (43) parametro -> . ID nome
    (44) parametro -> . NUMERO
    (45) parametro -> . FALSE
    (46) parametro -> . TRUE
    (80) empty -> .

    ID              shift and go to state 41
    NUMERO          shift and go to state 42
    FALSE           shift and go to state 43
    TRUE            shift and go to state 44
    )               reduce using rule 80 (empty -> .)

    lista_param                    shift and go to state 71
    parametro                      shift and go to state 72
    empty                          shift and go to state 73

state 36

    (50) nome -> empty .

    ATRIBUICAO      reduce using rule 50 (nome -> empty .)
    ;               reduce using rule 50 (nome -> empty .)
    END             reduce using rule 50 (nome -> empty .)
    ELSE            reduce using rule 50 (nome -> empty .)
    >               reduce using rule 50 (nome -> empty .)
    <               reduce using rule 50 (nome -> empty .)
    COMPARACAO      reduce using rule 50 (nome -> empty .)
    AND             reduce using rule 50 (nome -> empty .)
    OR              reduce using rule 50 (nome -> empty .)
    DO              reduce using rule 50 (nome -> empty .)
    THEN            reduce using rule 50 (nome -> empty .)
    +               reduce using rule 50 (nome -> empty .)
    -               reduce using rule 50 (nome -> empty .)
    *               reduce using rule 50 (nome -> empty .)
    /               reduce using rule 50 (nome -> empty .)
    ]               reduce using rule 50 (nome -> empty .)
    ,               reduce using rule 50 (nome -> empty .)
    )               reduce using rule 50 (nome -> empty .)
    TO              reduce using rule 50 (nome -> empty .)


state 37

    (26) comando -> WHILE exp_logica . DO bloco_com

    DO              shift and go to state 74


state 38

    (35) exp_logica -> param_logico . op_logico exp_logica
    (37) exp_logica -> param_logico .
    (71) op_logico -> . AND
    (72) op_logico -> . OR

    DO              reduce using rule 37 (exp_logica -> param_logico .)
    THEN            reduce using rule 37 (exp_logica -> param_logico .)
    ;               reduce using rule 37 (exp_logica -> param_logico .)
    END             reduce using rule 37 (exp_logica -> param_logico .)
    ELSE            reduce using rule 37 (exp_logica -> param_logico .)
    )               reduce using rule 37 (exp_logica -> param_logico .)
    AND             shift and go to state 76
    OR              shift and go to state 77

    op_logico                      shift and go to state 75

state 39

    (36) exp_logica -> ( . param_logico op_logico exp_logica )
    (38) param_logico -> . parametro op_comp parametro
    (39) param_logico -> . parametro
    (43) parametro -> . ID nome
    (44) parametro -> . NUMERO
    (45) parametro -> . FALSE
    (46) parametro -> . TRUE

    ID              shift and go to state 41
    NUMERO          shift and go to state 42
    FALSE           shift and go to state 43
    TRUE            shift and go to state 44

    param_logico                   shift and go to state 78
    parametro                      shift and go to state 40

state 40

    (38) param_logico -> parametro . op_comp parametro
    (39) param_logico -> parametro .
    (73) op_comp -> . >
    (74) op_comp -> . <
    (75) op_comp -> . COMPARACAO

    AND             reduce using rule 39 (param_logico -> parametro .)
    OR              reduce using rule 39 (param_logico -> parametro .)
    DO              reduce using rule 39 (param_logico -> parametro .)
    THEN            reduce using rule 39 (param_logico -> parametro .)
    ;               reduce using rule 39 (param_logico -> parametro .)
    END             reduce using rule 39 (param_logico -> parametro .)
    ELSE            reduce using rule 39 (param_logico -> parametro .)
    )               reduce using rule 39 (param_logico -> parametro .)
    >               shift and go to state 80
    <               shift and go to state 81
    COMPARACAO      shift and go to state 82

    op_comp                        shift and go to state 79

state 41

    (43) parametro -> ID . nome
    (47) nome -> . . ID nome
    (48) nome -> . [ parametro ]
    (49) nome -> . ( lista_param )
    (50) nome -> . empty
    (80) empty -> .

    .               shift and go to state 33
    [               shift and go to state 34
    (               shift and go to state 35
    >               reduce using rule 80 (empty -> .)
    <               reduce using rule 80 (empty -> .)
    COMPARACAO      reduce using rule 80 (empty -> .)
    AND             reduce using rule 80 (empty -> .)
    OR              reduce using rule 80 (empty -> .)
    DO              reduce using rule 80 (empty -> .)
    THEN            reduce using rule 80 (empty -> .)
    +               reduce using rule 80 (empty -> .)
    -               reduce using rule 80 (empty -> .)
    *               reduce using rule 80 (empty -> .)
    /               reduce using rule 80 (empty -> .)
    ;               reduce using rule 80 (empty -> .)
    END             reduce using rule 80 (empty -> .)
    ELSE            reduce using rule 80 (empty -> .)
    ]               reduce using rule 80 (empty -> .)
    ,               reduce using rule 80 (empty -> .)
    )               reduce using rule 80 (empty -> .)
    TO              reduce using rule 80 (empty -> .)

    nome                           shift and go to state 83
    empty                          shift and go to state 36

state 42

    (44) parametro -> NUMERO .

    >               reduce using rule 44 (parametro -> NUMERO .)
    <               reduce using rule 44 (parametro -> NUMERO .)
    COMPARACAO      reduce using rule 44 (parametro -> NUMERO .)
    AND             reduce using rule 44 (parametro -> NUMERO .)
    OR              reduce using rule 44 (parametro -> NUMERO .)
    DO              reduce using rule 44 (parametro -> NUMERO .)
    THEN            reduce using rule 44 (parametro -> NUMERO .)
    +               reduce using rule 44 (parametro -> NUMERO .)
    -               reduce using rule 44 (parametro -> NUMERO .)
    *               reduce using rule 44 (parametro -> NUMERO .)
    /               reduce using rule 44 (parametro -> NUMERO .)
    ;               reduce using rule 44 (parametro -> NUMERO .)
    END             reduce using rule 44 (parametro -> NUMERO .)
    ELSE            reduce using rule 44 (parametro -> NUMERO .)
    ]               reduce using rule 44 (parametro -> NUMERO .)
    ,               reduce using rule 44 (parametro -> NUMERO .)
    )               reduce using rule 44 (parametro -> NUMERO .)
    TO              reduce using rule 44 (parametro -> NUMERO .)


state 43

    (45) parametro -> FALSE .

    >               reduce using rule 45 (parametro -> FALSE .)
    <               reduce using rule 45 (parametro -> FALSE .)
    COMPARACAO      reduce using rule 45 (parametro -> FALSE .)
    AND             reduce using rule 45 (parametro -> FALSE .)
    OR              reduce using rule 45 (parametro -> FALSE .)
    DO              reduce using rule 45 (parametro -> FALSE .)
    THEN            reduce using rule 45 (parametro -> FALSE .)
    +               reduce using rule 45 (parametro -> FALSE .)
    -               reduce using rule 45 (parametro -> FALSE .)
    *               reduce using rule 45 (parametro -> FALSE .)
    /               reduce using rule 45 (parametro -> FALSE .)
    ;               reduce using rule 45 (parametro -> FALSE .)
    END             reduce using rule 45 (parametro -> FALSE .)
    ELSE            reduce using rule 45 (parametro -> FALSE .)
    ]               reduce using rule 45 (parametro -> FALSE .)
    ,               reduce using rule 45 (parametro -> FALSE .)
    )               reduce using rule 45 (parametro -> FALSE .)
    TO              reduce using rule 45 (parametro -> FALSE .)


state 44

    (46) parametro -> TRUE .

    >               reduce using rule 46 (parametro -> TRUE .)
    <               reduce using rule 46 (parametro -> TRUE .)
    COMPARACAO      reduce using rule 46 (parametro -> TRUE .)
    AND             reduce using rule 46 (parametro -> TRUE .)
    OR              reduce using rule 46 (parametro -> TRUE .)
    DO              reduce using rule 46 (parametro -> TRUE .)
    THEN            reduce using rule 46 (parametro -> TRUE .)
    +               reduce using rule 46 (parametro -> TRUE .)
    -               reduce using rule 46 (parametro -> TRUE .)
    *               reduce using rule 46 (parametro -> TRUE .)
    /               reduce using rule 46 (parametro -> TRUE .)
    ;               reduce using rule 46 (parametro -> TRUE .)
    END             reduce using rule 46 (parametro -> TRUE .)
    ELSE            reduce using rule 46 (parametro -> TRUE .)
    ]               reduce using rule 46 (parametro -> TRUE .)
    ,               reduce using rule 46 (parametro -> TRUE .)
    )               reduce using rule 46 (parametro -> TRUE .)
    TO              reduce using rule 46 (parametro -> TRUE .)


state 45

    (27) comando -> IF exp_logica . THEN bloco_com else

    THEN            shift and go to state 84


state 46

    (28) comando -> FOR for . DO bloco_com

    DO              shift and go to state 85


state 47

    (66) for -> ID . ATRIBUICAO parametro TO parametro

    ATRIBUICAO      shift and go to state 86


state 48

    (29) comando -> WRITE const_valor .

    ;               reduce using rule 29 (comando -> WRITE const_valor .)
    END             reduce using rule 29 (comando -> WRITE const_valor .)
    ELSE            reduce using rule 29 (comando -> WRITE const_valor .)


state 49

    (6) const_valor -> PALAVRA .

    ;               reduce using rule 6 (const_valor -> PALAVRA .)
    END             reduce using rule 6 (const_valor -> PALAVRA .)
    ELSE            reduce using rule 6 (const_valor -> PALAVRA .)


state 50

    (7) const_valor -> exp_mat .

    ;               reduce using rule 7 (const_valor -> exp_mat .)
    END             reduce using rule 7 (const_valor -> exp_mat .)
    ELSE            reduce using rule 7 (const_valor -> exp_mat .)


state 51

    (40) exp_mat -> parametro . op_mat exp_mat
    (42) exp_mat -> parametro .
    (76) op_mat -> . +
    (77) op_mat -> . -
    (78) op_mat -> . *
    (79) op_mat -> . /

    ;               reduce using rule 42 (exp_mat -> parametro .)
    END             reduce using rule 42 (exp_mat -> parametro .)
    ELSE            reduce using rule 42 (exp_mat -> parametro .)
    )               reduce using rule 42 (exp_mat -> parametro .)
    +               shift and go to state 88
    -               shift and go to state 89
    *               shift and go to state 90
    /               shift and go to state 91

    op_mat                         shift and go to state 87

state 52

    (41) exp_mat -> ( . parametro op_mat exp_mat )
    (43) parametro -> . ID nome
    (44) parametro -> . NUMERO
    (45) parametro -> . FALSE
    (46) parametro -> . TRUE

    ID              shift and go to state 41
    NUMERO          shift and go to state 42
    FALSE           shift and go to state 43
    TRUE            shift and go to state 44

    parametro                      shift and go to state 92

state 53

    (30) comando -> READ ID . nome
    (47) nome -> . . ID nome
    (48) nome -> . [ parametro ]
    (49) nome -> . ( lista_param )
    (50) nome -> . empty
    (80) empty -> .

    .               shift and go to state 33
    [               shift and go to state 34
    (               shift and go to state 35
    ;               reduce using rule 80 (empty -> .)
    END             reduce using rule 80 (empty -> .)
    ELSE            reduce using rule 80 (empty -> .)

    nome                           shift and go to state 93
    empty                          shift and go to state 36

state 54

    (3) declaracoes -> def_const def_tipos def_var def_rotina .

    BEGIN           reduce using rule 3 (declaracoes -> def_const def_tipos def_var def_rotina .)


state 55

    (12) def_rotina -> rotina . def_rotina
    (12) def_rotina -> . rotina def_rotina
    (13) def_rotina -> . empty
    (18) rotina -> . FUNCTION ID param_rotina : tipo_dado bloco_rotina
    (19) rotina -> . PROCEDURE ID param_rotina bloco_rotina
    (80) empty -> .

    FUNCTION        shift and go to state 57
    PROCEDURE       shift and go to state 58
    BEGIN           reduce using rule 80 (empty -> .)

    rotina                         shift and go to state 55
    def_rotina                     shift and go to state 94
    empty                          shift and go to state 56

state 56

    (13) def_rotina -> empty .

    BEGIN           reduce using rule 13 (def_rotina -> empty .)


state 57

    (18) rotina -> FUNCTION . ID param_rotina : tipo_dado bloco_rotina

    ID              shift and go to state 95


state 58

    (19) rotina -> PROCEDURE . ID param_rotina bloco_rotina

    ID              shift and go to state 96


state 59

    (10) def_var -> variavel def_var .

    FUNCTION        reduce using rule 10 (def_var -> variavel def_var .)
    PROCEDURE       reduce using rule 10 (def_var -> variavel def_var .)
    BEGIN           reduce using rule 10 (def_var -> variavel def_var .)


state 60

    (16) variavel -> VAR campo . ;

    ;               shift and go to state 97


state 61

    (17) campo -> ID . lista_id : tipo_dado
    (54) lista_id -> . , ID lista_id
    (55) lista_id -> . empty
    (80) empty -> .

    ,               shift and go to state 99
    :               reduce using rule 80 (empty -> .)

    lista_id                       shift and go to state 98
    empty                          shift and go to state 100

state 62

    (15) tipo -> TYPE ID = . tipo_dado ;
    (59) tipo_dado -> . INTEGER
    (60) tipo_dado -> . REAL
    (61) tipo_dado -> . CHAR
    (62) tipo_dado -> . BOOLEAN
    (63) tipo_dado -> . ARRAY [ NUMERO ] OF tipo_dado
    (64) tipo_dado -> . RECORD campos END
    (65) tipo_dado -> . ID

    INTEGER         shift and go to state 103
    REAL            shift and go to state 104
    CHAR            shift and go to state 105
    BOOLEAN         shift and go to state 106
    ARRAY           shift and go to state 107
    RECORD          shift and go to state 108
    ID              shift and go to state 101

    tipo_dado                      shift and go to state 102

state 63

    (14) constante -> CONST ID = const_valor . ;

    ;               shift and go to state 109


state 64

    (2) bloco -> BEGIN comando lista_com END .

    $end            reduce using rule 2 (bloco -> BEGIN comando lista_com END .)
    ;               reduce using rule 2 (bloco -> BEGIN comando lista_com END .)
    END             reduce using rule 2 (bloco -> BEGIN comando lista_com END .)
    ELSE            reduce using rule 2 (bloco -> BEGIN comando lista_com END .)
    FUNCTION        reduce using rule 2 (bloco -> BEGIN comando lista_com END .)
    PROCEDURE       reduce using rule 2 (bloco -> BEGIN comando lista_com END .)
    BEGIN           reduce using rule 2 (bloco -> BEGIN comando lista_com END .)


state 65

    (23) lista_com -> ; comando . lista_com
    (23) lista_com -> . ; comando lista_com
    (24) lista_com -> . empty
    (80) empty -> .

    ;               shift and go to state 30
    END             reduce using rule 80 (empty -> .)

    lista_com                      shift and go to state 110
    empty                          shift and go to state 31

state 66

    (25) comando -> ID nome atribuicao .

    ;               reduce using rule 25 (comando -> ID nome atribuicao .)
    END             reduce using rule 25 (comando -> ID nome atribuicao .)
    ELSE            reduce using rule 25 (comando -> ID nome atribuicao .)


state 67
